Added font awesome in bower.

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "adminlte": "almasaeed2010/adminlte",
     "bootstrap": "twbs/bootstrap-sass",
+    "fontawesome": "components/font-awesome",
     "jquery": "jquery/jquery"
   }
 }
