--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "4.2.*",
+		"barryvdh/laravel-elfinder": "0.2.*@dev",
 		"fzaninotto/faker": "1.5.*@dev"
 	},
 	"autoload": {
