--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"barryvdh/laravel-elfinder": "0.2.*@dev",
+		"atticmedia/anvard": "dev-master",
 		"fzaninotto/faker": "1.5.*@dev"
 	},
 	"autoload": {
